# cookiecutter-DRF

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
{{ cookiecutter.project_slug }}/docs/: 配置.md
{{ cookiecutter.project_slug }}/src/: models.py  settings.py  urls.py
{{ cookiecutter.project_slug }}/websites/: .env.development  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
{{ cookiecutter.project_slug }}/websites/src/: App.vue  main.ts  style.css
{{ cookiecutter.project_slug }}/websites/src/api/ping/: index.ts
{{ cookiecutter.project_slug }}/websites/src/components/: HelloWorld.vue
{{ cookiecutter.project_slug }}/websites/src/types/: env.d.ts
{{ cookiecutter.project_slug }}/websites/src/utils/: request.ts
