[tool.poetry]
name = "{{ project_slug }}"
version = "0.1.0"
description = "{{ project_short_description }}"
authors = ["{{ github_username }} <{{ email }}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
